--- a/src/index.css
+++ b/src/index.css
@@ -44,18 +44,17 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 18px;
   appearance: none;
   border: none;
-  background: rgb(246, 166, 34);
+  background: lightgray;
   border-radius: 20px;
   padding: 10px 20px;
   color: white;
   font-weight: bold;
-  text-transform: uppercase;
   cursor: pointer;
 }
 
 .cart {
-  background: #0003ff;
-  color: #fff;
+  background: white;
+  color: black;
   padding: 20px;
   margin-bottom: 20px;
   display: flex;
@@ -78,6 +77,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .cart .amount {
+  color: black;
   font-size: 30px;
   margin-left: 10px;
 }
@@ -108,21 +108,24 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .cart .sum {
+  color: black;
   display: block;
   font-weight: bold;
   width: 100%;
 }
 
 .cart .quantity {
+  color: black;
   margin-right: 10px;
 }
 
 .cart .actions button {
   appearance: none;
   border: none;
-  background: rgb(246, 166, 34);
+  background: black;
+  opacity: 85%;
   color: white;
-  margin-right: 2px;
+  margin-right: 5px;
   width: 25px;
   height: 25px;
   border-radius: 50%;
